<resources>
    <string name="app_name">gestiongastos</string>
    <string name="lblUsuario">LogIn usuario</string>
    <string name="username">Nombre Usuario</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="password">Password</string>
    <string name="grupo">Grupo</string>
    <string name="femenino">femenino</string>
    <string name="masculino">masculino</string>
    <string name="lblNombreTipoDato">nombre</string>
    <string name="lblCategoriaTipoDato">categoria</string>
    <string name="row_nombre_tipo_dato">nombre</string>
    <string name="row_categoria">categoria</string>
    <string name="log_in">log in</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="report_start_date">fecha inicio</string>
    <string name="report_end_date">fecha fin</string>
    <string name="lbl_fecha_incio">fecha inicio</string>
    <string name="lbl_fecha_fin">fecha fin</string>

    <!--    formulario AltaGasto-->


    <!--    para uso general-->
    <string name="genericText">sin información</string>

    <!--    Variables del Bottom Nav-->
    <string name="title_home">Gastos</string>
    <!--    <string name="title_dashboard">Dashboard</string>-->
    <!--    <string name="title_notifications">Notifications</string>-->
    <!--    <string name="title_profile">Profile</string>-->
    <string name="title_dashboard">Graficas</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_profile">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">cancelar</string>
    <string name="guardar">guardar</string>
    <string name="importe">importe</string>
    <string name="lblAlarma">nombre alarma</string>
    <string name="txtCicloDias">15</string>
    <string name="lblAlarmas">Lista de Alarmas</string>

</resources>