<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaAlarma">

    <EditText
        android:id="@+id/txtImporteAlarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toEndOf="@+id/lblNombreAlarma"
        app:layout_constraintStart_toStartOf="@+id/lblNombreAlarma"
        app:layout_constraintTop_toBottomOf="@+id/lblImporteAlarma"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtNomeAlarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/lblNombreAlarma"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <TextView
            android:id="@+id/lblCancelAltaAlarma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:text="@string/cancelar" />

        <TextView
            android:id="@+id/lblGuardarAlarma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:text="@string/guardar" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblImporteAlarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/importe"
        app:layout_constraintEnd_toEndOf="@+id/txtImporteAlarma"
        app:layout_constraintStart_toStartOf="@+id/txtImporteAlarma"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />

    <TextView
        android:id="@+id/lblNombreAlarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lblAlarma"
        app:layout_constraintEnd_toEndOf="@+id/txtNomeAlarma"
        app:layout_constraintStart_toStartOf="@+id/txtNomeAlarma"
        app:layout_constraintTop_toTopOf="@+id/guideline35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="231dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="41dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="107dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="336dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="524dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCicloMes"
        android:layout_width="297dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="@+id/lblImporteAlarma"
        app:layout_constraintStart_toStartOf="@+id/lblImporteAlarma"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="223dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.509"
        tools:layout_editor_absoluteX="68dp" />

</androidx.constraintlayout.widget.ConstraintLayout>